tests/interpreter/pass/016-min.hyg
assert(min(4,5) = 4)