tests/interpreter/fail/016-min.hyg
assert(min(4,5) = 5)